// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalNav renders properly with dropdown Levels 1`] = `
<nav
  class="navbar navbar-default navbar-pf"
>
  <nav
    class="navbar navbar-default navbar-pf"
  >
    <div
      class="navbar-header"
    >
      <a
        class="navbar-brand"
        href="#"
        role="button"
      />
    </div>
    <nav
      class="collapse navbar-collapse"
    >
      <ul
        class="nav navbar-nav navbar-right navbar-iconic navbar-utility"
      >
        <li
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle btn btn-link"
            id="app-help-dropdown"
            role="button"
            type="button"
          >
            <span
              class="pficon pficon-help"
              title="Help"
            />
          </button>
          <ul
            aria-labelledby="app-help-dropdown"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Help
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                About
              </a>
            </li>
          </ul>
        </li>
        <li
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle btn btn-link"
            id="app-user-dropdown"
            role="button"
            type="button"
          >
            <span>
              <span
                class="pficon pficon-user"
                title="Help"
              />
              <span
                class="dropdown-title"
              >
                 Brian Johnson
              </span>
            </span>
             
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="app-user-dropdown"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                User Preferences
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Logout
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </nav>
  <div
    class="collapse navbar-collapse navbar-collapse-1"
  >
    <ul
      class="nav navbar-nav navbar-primary"
    >
      <li
        class="dropdown"
      >
        <a
          bsclass="dropdown-toggle"
          bsrole="toggle"
        >
          Dropdown
          <span
            class="caret"
          />
        </a>
        <ul
          class="dropdown-menu"
          role="menu"
        >
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Link
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Another link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Separated link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              One more separated link
            </a>
          </li>
        </ul>
      </li>
      <li
        class="dropdown"
      >
        <a
          bsclass="dropdown-toggle"
          bsrole="toggle"
        >
          Dropdown with Submenu
          <span
            class="caret"
          />
        </a>
        <ul
          class="dropdown-menu"
          role="menu"
        >
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Link
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Another link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Separated link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              One more separated link
            </a>
          </li>
          <li
            class="dropdown-submenu dropdown"
          >
            <a
              bsclass="dropdown-toggle"
              bsrole="toggle"
            >
              More options
            </a>
            <ul
              class="dropdown-menu"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Link
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another link
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  One more separated link
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="dropdown"
      >
        <a
          bsclass="dropdown-toggle"
          bsrole="toggle"
        >
          Dropdown with Dropup Submenu
          <span
            class="caret"
          />
        </a>
        <ul
          class="dropup dropdown-menu"
          role="menu"
        >
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Link
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Another link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Separated link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              One more separated link
            </a>
          </li>
          <li
            class="dropdown-submenu dropdown"
          >
            <a
              bsclass="dropdown-toggle"
              bsrole="toggle"
            >
              More options
            </a>
            <ul
              class="dropdown-menu"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Link
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another link
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  One more separated link
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="dropdown"
      >
        <a
          bsclass="dropdown-toggle"
          bsrole="toggle"
        >
          Dropdown with Pull-left Submenu
          <span
            class="caret"
          />
        </a>
        <ul
          class="dropdown-menu"
          role="menu"
        >
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Link
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Another link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Separated link
            </a>
          </li>
          <li
            class="divider"
            role="separator"
          />
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              One more separated link
            </a>
          </li>
          <li
            class="dropdown-submenu pull-left dropdown"
          >
            <a
              bsclass="dropdown-toggle"
              bsrole="toggle"
            >
              More options
            </a>
            <ul
              class="dropdown-menu"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Link
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another link
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  One more separated link
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          No Dropdown
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`HorizontalNav renders properly with singleLevel 1`] = `
<nav
  class="navbar navbar-default navbar-pf"
>
  <nav
    class="navbar navbar-default navbar-pf"
  >
    <div
      class="navbar-header"
    >
      <a
        class="navbar-brand"
        href="#"
        role="button"
      />
    </div>
    <nav
      class="collapse navbar-collapse"
    >
      <ul
        class="nav navbar-nav navbar-right navbar-iconic navbar-utility"
      >
        <li
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle btn btn-link"
            id="app-help-dropdown"
            role="button"
            type="button"
          >
            <span
              class="pficon pficon-help"
              title="Help"
            />
          </button>
          <ul
            aria-labelledby="app-help-dropdown"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Help
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                About
              </a>
            </li>
          </ul>
        </li>
        <li
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle btn btn-link"
            id="app-user-dropdown"
            role="button"
            type="button"
          >
            <span>
              <span
                class="pficon pficon-user"
                title="Help"
              />
              <span
                class="dropdown-title"
              >
                 Brian Johnson
              </span>
            </span>
             
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="app-user-dropdown"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                User Preferences
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Logout
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </nav>
  <div
    class="collapse navbar-collapse navbar-collapse-1"
  >
    <ul
      class="nav navbar-nav navbar-primary"
    >
      <li
        class=""
      >
        <a
          href="#"
        >
          First Link
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          Another Link
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          And Another
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`HorizontalNav renders properly with two Levels 1`] = `
<nav
  class="navbar navbar-default navbar-pf"
>
  <nav
    class="navbar navbar-default navbar-pf"
  >
    <div
      class="navbar-header"
    >
      <a
        class="navbar-brand"
        href="#"
        role="button"
      />
    </div>
    <nav
      class="collapse navbar-collapse"
    >
      <ul
        class="nav navbar-nav navbar-right navbar-iconic navbar-utility"
      >
        <li
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle btn btn-link"
            id="app-help-dropdown"
            role="button"
            type="button"
          >
            <span
              class="pficon pficon-help"
              title="Help"
            />
          </button>
          <ul
            aria-labelledby="app-help-dropdown"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Help
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                About
              </a>
            </li>
          </ul>
        </li>
        <li
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle btn btn-link"
            id="app-user-dropdown"
            role="button"
            type="button"
          >
            <span>
              <span
                class="pficon pficon-user"
                title="Help"
              />
              <span
                class="dropdown-title"
              >
                 Brian Johnson
              </span>
            </span>
             
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="app-user-dropdown"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                User Preferences
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Logout
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </nav>
  <div
    class="collapse navbar-collapse navbar-collapse-1"
  >
    <ul
      class="persistent-secondary nav navbar-nav navbar-primary"
    >
      <li
        class=""
      >
        <a
          href="#"
        >
          First Link
        </a>
      </li>
      <li
        class=" active"
      >
        <a
          href="#"
        >
          Another Link
        </a>
        <ul
          class="nav navbar-nav navbar-persistent"
        >
          <li
            class=""
          >
            <a
              href="#"
            >
              Link
            </a>
          </li>
          <li
            class=" active"
          >
            <a
              href="#"
            >
              Another Link
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="#"
            >
              Something Else Here
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="#"
            >
              Remembering to keep
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="#"
            >
              It between five and seven
            </a>
          </li>
          <li
            class=""
          >
            <a
              href="#"
            >
              More options
            </a>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          And Another
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          As a General Rule
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          Five to Seven Links
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#"
        >
          Is Good
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
